on to discussion

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -384,7 +384,7 @@ Quick start cards, supporting simple print outs drawing attehntion to key afford
 
 At this stage the options involved, the game mechanics of movement, jumping, level design, and final challenge to swap out the look of one or more of the characters by designing pixel art, and swapping out the line of code that adds the asset to the game. A current version of the quick start cards are available online at the online technical repository for this study [^] ADD THE LINK HERE.
 
-These _quick start_ cards supported participants initial interaction with the code in a way strongly aligned with the _use_ and _modify_ stages of the UMC framework [@franklin_analysis_2020]. The start process addressed the tension concerning the issue of providing documentation with support for users to be able complete coding tasks but also facilitate choice over learner pathways. 
+These _quick start_ cards supported participants initial interaction with the code in a way strongly aligned with the _use_ and _modify_ stages of the UMC framework [@franklin_analysis_2020]. The start process addressed the tension concerning the issue of providing documentation with support for users to be able complete coding tasks but also facilitate choice over learner pathways.
 
 ##### Structuring instructional tutorial resources and code snippets
 
@@ -417,9 +417,10 @@ The use of code snippets, while a promising authentic practice, presented challe
 
 Returning to the vignette of the child Toby described earlyer in this chapter we can see him use, rather than the written step-by-step help, jump into the code example, searching for the new code constructs and in-line code comments notes in the code highlighting their purpose.
 
-MORE - Toby carefully scans...
+<!-- MORE - Toby carefully scans... -->
 
-Thus, while not proof of overall efficacy of the use of code snippets the pattern of behaviour of Toby in the implementation of code is promising. IN TERMS OF ...
+Thus, while not proof of overall efficacy of the use of code snippets the pattern of behaviour of Toby in the implementation of code is promising.
+IN TERMS OF ...
 
 **Theming the collection of gameplay design patterns**
 
@@ -451,41 +452,23 @@ LINK & MORE SIGNPOSTING?
 
 <!-- ### Design narrative on conflict due to identity clashes and dysfunctional group work -->
 
-**Participants alienated - clash of cultures ,clashes of identity not hard core coders, no on-going playtesting,**
+<!-- **Participants stuck / demotivated : scope of ambition to high,   collaboration groups too big (transition),** -->
 
-**Participants stuck / demotivated : scope of ambition to high,   collaboration groups too big (transition),**
-
-The example of Toby's coding practice example in P2 is promising, however other varied experienced existed. In P1 there were particular issues of alienation from the process which align with issues of cultural exclusion from coding processes explored in Chapter 2 [SEVERAL REFERENCES] [@kafai_constructionist_2015-1]. As explored in a previous section, in P1 my opening design employed several non-coding techniques to promote positive affect to form an inclusive idioculture to avoid alienation from foreign coding tools.
+Some participants felt alienated when transitions shifted to coding not only due to tool use but a sense of alienation from the culture of coding, an experiences which aligns with research on cultural exclusion from coding processes explored in Chapter 2 [SEVERAL REFERENCES] [@kafai_constructionist_2015-1]. As explored in a previous section, in P1 my opening design employed several non-coding techniques to promote positive affect to form an inclusive idioculture to avoid alienation from foreign coding tools. While these were noted as positive in P1 feedback,  several tensions compounded for the family described in Appendix 5.bee to create a conflict  composed of accumulating tensions from alienation from the group coding environment and associated peer working dynamics which they resolved by choosing not to continue with the activity. The transition from the non-code creative activities to enacting them with code that spurred alienation from a perceived culture of hard core coding at that stage of the process.  While there were technical aspects to the conflict, these were compounded with more social and cultural barriers that also arose.
 
 <!-- These activities including starter games and game playing on entry and sharing of gaming experience of let laptops with games installed on them. -->
-
-While these were noted as positive in P1 feedback, as previously explored above and in Appendix 5.a,  one family chose not to continue in the extended period of P1. Their experience can be presented as a conflict composed of accumulating tensions from alienation from the group coding environment and associated peer working dynamics. While there were technical aspects to the conflict, these were compounded with more social and cultural barriers that also arose.
-
-
-**Summary of the conflict**
-
-It was the transition from the non-code creative activities to enacting them with code that spurred alienation from a perceived culture of hard core coding at that stage of the process. I had not noted that alienation perhaps as I was busy trying to solve the code issues of others.
-
-Thus, several tensions compounded for this family to create a conflict which they resolved by choosing not to continue with the activity.
-
-Alienation from the group process of building a game
 
 ![tensions with cultural layers](./Pictures/At_tension_2_v1.png){width=95%}
 
 Fig 5.x - Tensions involving cultural aspects of the game making process
 
-
-This surfaced some key matters of concern for this design. Firstly, the fragility of learners ongoing positive affect towards the group game making process caused by a transition from planning, sketching phase of the design process to code enactment.  Secondly,  a danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued. Thirdly, it highlighted the limits of what peer support from fellow participants could provide (explored in appendix).  
-
-**3d bee element summary or similar?**
-
-This conflict partly drove one family to not continue and extended period of making in P1.
-Members of this family had engaged in planning on paper and in particularly in creating pixel art, however tensions began to emerge when the introduced code framework framework did not support the desired features of one child. The feature they wanted to add to the game was bee design roaming a 3D landscape.  
+Members of this family had engaged in planning on paper and in particularly in creating pixel art, however tensions began to emerge when the introduced code framework  did not support the desired features of one child. The feature they wanted to add to the game was bee design roaming a 3D landscape.  
 
 In participant feedback, the  parent of one  family described in Appendix 5.x indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
 
-The feedback given in particular by this family served to underline the importance of motivate several changes in the learning design in the plane of cultural activity. While Chapter 7 analyses the participant reactions to the design in this more cultural dimension, here I (try to) limit exploration to the evolution of key learning design features addressing this aspect, namely the identification and nurturing of social coding processes.
+The feedback given in particular by this family  surfaced some key matters of concern for this design. Firstly, the fragility of learners ongoing positive affect towards the group game making process caused by a transition from planning, sketching phase of the design process to code enactment.  Secondly,  a danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued. Thirdly, it highlighted the limits of what peer support from fellow participants could provide (explored in appendix).  
 
+This reflection on this conflict motivate several changes in the learning design in the plane of cultural activity.  While Chapter 7 analyses the participant reactions to the design in this more cultural dimension, here I (try to) limit exploration to the evolution of key learning design features addressing this aspect, namely the identification and nurturing of social coding processes.
 
 <!--
 NOTE MOVE
@@ -496,7 +479,6 @@ Chapter 6 analyses the potential of activities which help build the participants
 
 While changes in the tools, documentation use were initially designed to solve technical problems, they also impacted the culture of the coding group.
 In particular the starting template/ half baked template, had particular impact on division of labour, and a knock on positive impact on general engagement.
-
 
 DOES THIS GO EARLIER?
 Despite relative simplicity of the highlighted affordances, complex and divergent style and feel of games emerged at these early stages and the use of collection of code examples that participants could choose prompted greater diversity still. In particular the starting template had particular impact on division of labour, allowing participants to work by themselves or with a family members, this had a knock on positive impact on general engagement.
@@ -563,17 +545,21 @@ The impact of social missions and playtesting are described in more detail in ch
 
 ## Chapter Discussion
 
-This chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences.
+This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored have focusing on first technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving computational fluency needed to complete the text coding of a multi-media project.
 
-IS THIS USEFUL HERE? LATER? NEXT CHAPTER?
-RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.  
+The next section begins analyses the specifics of the designs features in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
 
-LINK
-
-This chapter has by focusing on first technical and then more social dimensions of the learning design, (re)surfaced the many barriers to achieving computational fluency via the text coding of a multi-media project. The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. It then provides a summary of the designs approach to try to address these tensions in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
+It synthesises the features of the design narrative, existing research and employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
 
 
-In line with discussion of Chapter 3, this process develops a argumentative grammar fusing elements of DBR and CHAT including iterative process, anaysis of emerging tensions between systems elements, focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
+
+
+<!-- The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. -->
+
+<!-- IS THIS USEFUL HERE? LATER? NEXT CHAPTER?
+RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.   -->
+
+
 
 <!-- At some point in this process I realised that I wanted to encourage the growth of computational fluency.
 
@@ -589,24 +575,24 @@ That was not clear, the use of computational thinking also jumped out from a sen
 
 While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project. -->
 
-
-### On Affordances, DS and DBR ( using the argumentative grammar of 3GAT / DBR)
+### On Affordances, DS and DBR ( using the argumentative grammar of 3GAT / DBR) - MOVE THESE BITS
 
 <!-- - Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency   -->
+MOVE THIS TO THEORETICAL FRAMEWORK
 DBR lacks a single argumentative grammar [@brase_knowledge_2024], a set of concepts and approaches which aid in the posing of questions in a way which helps communicate the essence the design and potential for its replication or generalisation. Brase [-@brase_knowledge_2024] notes the inherent tension between flexibility and coherence in approach. However, in outlining an argumentative grammar of an intervention process aligned with 3GAT,
-Sannino and Engestrom [@cole_toward_2014] propose the core principles of formative interventions, namely double stimulation and the process of rising to the concrete via a germ cell concept. In addition they note the importance of transformative agency, analysis of contradictions, expansion and evolution of design, and the importance of concept formation. This chapter uses this approach to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters.
+Sannino and Engestrom [@cole_toward_2014] propose the core principles of formative interventions, namely double stimulation and the process of rising to the concrete via a germ cell concept. In addition they note the importance of transformative agency, analysis of contradictions, expansion and evolution of design, and the importance of concept formation.
 
-In returning to the role of 3GAT concepts in outlining the argumentative grammar of this  design, the following section expresses some of the key features of the design narrative.
+MOVE TO INTRODUCTION  
+This chapter uses this approach to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters.
 
-**Returning to discussion the  emergent and mutual nature of the design - inline with DBR principles**
 
-My role to encourage a learning environment which met the following characteristics via changes in learning design has been explored in this chapter via a detailed exploration of tensions arising, changes and inherrent motivations.
 
-This can be expressed as revising toolsets to effective mediation practices as an iterative process, aligned with even broad definitions of DBR
+#### Returning to discussion the  emergent and mutual nature of the design - inline with DBR principles
 
-These strategies can be seen pedagogy built around a sets of design affordances that fit a DBR approach,
+My active role to motivate and support an emerging community has been documented via iterative phases and where I design, introduce and revise a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research.
 
-MOVE / CALLBACK TO CHAPTER 3.
+DBR and CHAT may describe the same thing in different ways. 
+
 DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordnaces but also  mediation using concepts and more social practices or repetoires in CHAT [@barab_curriculum-based_2006].
 
 
