design link discussoin

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -585,46 +585,27 @@ Sannino and Engestrom [@cole_toward_2014] propose the core principles of formati
 MOVE TO INTRODUCTION  
 This chapter uses this approach to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters.
 
+The emergent and mutual nature of this design process align with both DBR and CHAT principles. In this and the previous chapter I have described my active role to motivate and support an emerging community in iterative phases. I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research.
 
+DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordances but also mediation using concepts and more social practices or repertoires in CHAT [@barab_curriculum-based_2006].
 
-#### Returning to discussion the  emergent and mutual nature of the design - inline with DBR principles
+While the term affordances has been well explored in the literature of HCI from a CHAT perspective, in  3GAT terminology, the affordances of my design would be terms as a series secondary stimuli. Sannino's work draws our attention to the intersection of the use of secondary stimuli by participants and volitional action or agency of participants.
 
-My active role to motivate and support an emerging community has been documented via iterative phases and where I design, introduce and revise a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research.
+The following chapters explore shifts to the overall structure of participant activity that can be said to align more closely with the concepts of relational agency supported by playtesting and social coding processes and transformative agency.
 
-DBR and CHAT may describe the same thing in different ways. 
-
-DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordnaces but also  mediation using concepts and more social practices or repetoires in CHAT [@barab_curriculum-based_2006].
-
-
-**agency**
-
-The adaptations of to these tools can be conceived of as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
-IS THIS EXPRESSED ELSE WHERE?
-
-Affordances can be viewed through a 3GAT lens as secondary stimuli.
-
-The meditational strategies, which emerged were not familiar to me before the start of this research, but after some research, exist in relevant research -
-e.g.  UMC literature, and half baked games, and constructionst design
-
-Also relational agency developed, supported by playtesting ans social coding processes.
-
-Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency.
+The evolution of these tools and practice affordances can at a foundational level as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants. This more foundation level is explored in relation to other research in the following section. 
 
 <!-- MOVE TO CH.7?
 Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
 
-<!-- IT FEELS LIKE IT WOULD BE GOOD TO TRY TO SQUEEZE THIS BIT INTO CHAPTER 4 ?
-PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black boxes for different goalsER 4 -->
-
-<!-- While these elements of ethos are aligned, the process of supporting novices to use an authentic, text-based language and authoring tools used by professional community required more specific adaptations (o) : creating simplified but extendable starting template; highlighting code variables as key design affordances; using a grid structure to visually facilitate level design; and simplifying the syntax and the structure of the game code. -->
 
 <!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
 
 
 ##### Comparing to Microworlds & constructionist design priniciples
 
-LINK WITH DBR / AFFORDANCES ABOVE
-
+The meditational strategies, which emerged were not familiar to me before the start of this research, but after some research, exist in relevant research -
+e.g.  UMC literature, and half baked games, and constructionst design
 
 The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the constructionism-informed design decisions made in creating a Microworld environment.
 
@@ -648,12 +629,11 @@ Of particular relevant to the process of this design is the  constructionist des
 
 The _black box_ design decisions of use of tools and documentation create a kind of border between the participants experience with the protective environment of the scaffolded learning experience and a more open ecology of learning from code in the wild; specifically via the use of authentic developer focused tools, processes and documentation. A significant drawback of using a bespoke tool for novices is that attempts to progress by stepping outside of that protective area risk culture shock and alienation from the newly unfamiliar environment.
 
-**tsp**
-Additionally, the concept of task specific programming language within that process is relevant as affordances in my design are chosen not only to impact on the game, but also to build familiarity with code structures.
+<!-- **tsp**
+Additionally, the concept of task specific programming language within that process is relevant as affordances in my design are chosen not only to impact on the game, but also to build familiarity with code structures. -->
 
 **differences**
 There are however notable differences to a Microworld approach, primarily in the use of an authentic coding language in the form of javascript. Thus, the code language has not been simplified, other supporting resources guide the participant to more simple uses.
-
 
 My design decision to build the toolset as structure on top of authentic tools and languages can be likened to creating a protective harbour to shield new users from the complexity of the underlying configuration of interrelated web-technologies and instead highlight design affordances that facilitate creative agency.
 
@@ -722,7 +702,7 @@ As explored above, the shift in template design from P1 to P2 involved a more st
 
 
 
-####  and what this synthesis has to say about participant  agency - OR MOVE UP?
+####  what this synthesis has to say about participant  agency - OR MOVE UP?
 
 And this has a knock on effect on the increase use of social coding processes, as the increased instrumental agency can be seen as the base of a triangular hierarchy of agency. One level may  needs to be built on the other.
 
