from train notes

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -95,6 +95,8 @@ This chapter contains a large number of headings in draft form. These will be re
 
 This chapter contains a high level of detail on the evolution of the learning design to situate the findings of the next chapters and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002-1]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged within DBR as a way to communicate the important detail of context [@hoadley_creating_2002-1; @brase_knowledge_2024; @bell_theoretical_2004]. In line with discussion of Chapter 3, this process is augmented by adding argumentative grammar of formative interventions prposed by the Helsinki school.
 
+<!-- MOVE TO INTRODUCTION  
+This chapter uses the argumentative grammar of DBR and CHAT  approaches to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters. -->
 
 <!-- In particular, the evolution of the key pedagogical features is analysed via  emerging tensions between system elements in learning design. Exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase. -->
 
@@ -553,7 +555,6 @@ It synthesises the features of the design narrative, existing research and emplo
 
 
 
-
 <!-- The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. -->
 
 <!-- IS THIS USEFUL HERE? LATER? NEXT CHAPTER?
@@ -575,16 +576,6 @@ That was not clear, the use of computational thinking also jumped out from a sen
 
 While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project. -->
 
-### On Affordances, DS and DBR ( using the argumentative grammar of 3GAT / DBR) - MOVE THESE BITS
-
-<!-- - Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency   -->
-MOVE THIS TO THEORETICAL FRAMEWORK
-DBR lacks a single argumentative grammar [@brase_knowledge_2024], a set of concepts and approaches which aid in the posing of questions in a way which helps communicate the essence the design and potential for its replication or generalisation. Brase [-@brase_knowledge_2024] notes the inherent tension between flexibility and coherence in approach. However, in outlining an argumentative grammar of an intervention process aligned with 3GAT,
-Sannino and Engestrom [@cole_toward_2014] propose the core principles of formative interventions, namely double stimulation and the process of rising to the concrete via a germ cell concept. In addition they note the importance of transformative agency, analysis of contradictions, expansion and evolution of design, and the importance of concept formation.
-
-MOVE TO INTRODUCTION  
-This chapter uses this approach to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters.
-
 The emergent and mutual nature of this design process align with both DBR and CHAT principles. In this and the previous chapter I have described my active role to motivate and support an emerging community in iterative phases. I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research.
 
 DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordances but also mediation using concepts and more social practices or repertoires in CHAT [@barab_curriculum-based_2006].
@@ -593,7 +584,7 @@ While the term affordances has been well explored in the literature of HCI from 
 
 The following chapters explore shifts to the overall structure of participant activity that can be said to align more closely with the concepts of relational agency supported by playtesting and social coding processes and transformative agency.
 
-The evolution of these tools and practice affordances can at a foundational level as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants. This more foundation level is explored in relation to other research in the following section. 
+The evolution of these tools and practice affordances can at a foundational level as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants. This more foundation level is explored in relation to other research in the following section.
 
 <!-- MOVE TO CH.7?
 Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
@@ -653,47 +644,6 @@ Lifting the lid on hidden technologies and concepts in hands-on, exploratory pro
     Pearl: You just take things for granted don’t you?
 
 
-
-### Rising to the concrete - the emergence of GDPs as a germ cell of activity
-
-The process of rising to the concrete in CHAT is complex, and not seen as a requirement for formative interventions [Sannino etc]. However, viewed as powerful in potential. To try to acheive it, the researcher engages in an exploration of complex, messy concrete processes is undertaken over time to try to discern overarching concerns which can be expressed as a prototypical abstract germ cell concept.
-The resulting utilit of this germ cell is then in its application in different settings, or scopes of activity.
-
-<!-- NOTE Blunden and Engestrom's disagreement about unit of analysis -->
-
-For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, (and are also the topic of Chapter 6.)
-
-
-**Comparing to Stepwise approaches**
-
-Another alignment to existing research in this area in the move from a design-build-test to a stepwise approach, outline by Denner et al. [@denner_does_2019], in the shift from P1 to P2. As noted in the literature review, while their description of a step-wise approach is not clearly articulated, it comprises broadly of a fundamental coding approach which is introduced in simplistic, proto-typical format for learners to experience and explore, and which is then replaced by a more advanced model or more complicated instance of the task.
-
-This approach is clearly visible in the supporting structures and overall pedagogy outlined in this chapter specifically in the evolution of the use of GDPs, which were introduced as part of several guiding activities. These include:
-
-- GDPs identified via playing games as part of an activity adapted from Moveable Game Jams
-- GDPs incorporated as affordances into a starter game template in line with Microworld pedagogical principles
-- GDPs as quick start cards designrd to scaffold modification of code template
-- GDPs used in response  participant  requests for new features they wanted to add to their games resulting  as a menu of GDPs as documentation and code examples to facilitate creation of new code
-
-
-EDIT THE FOLLOWING DOWN
-
-For participants the help is conceptual and motivatinal.  
-
-For facilitators, GDPs can help communicate and package useful tools and processes.
-
-The germ cell of GDPs can been seen to be operating at different scopes of activity system as part of linked but varied goals.
-
-The data gathered showed that while many were at a level of making changes to personal code projects others were more to do with interaction in an emerging culture of this community of game makers.
-
-OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
-
-
-<!-- NOTE - DROP - MAKE MORE DIRECT
-While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
-
-
-
 #### Synthesis effect of UMC + collection of GDPS
 
 Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
@@ -715,19 +665,62 @@ Playtesting as a process and the use of GDPs in varied ways by participants was 
 
 Chapter 7 explores the delivery and start to explore the impact of the and emerging community processes on cultural dimensions of the game making activity on participants development of agency.
 
+### Rising to the concrete - the emergence of GDPs as a germ cell of activity
+
+The process of rising to the concrete via a germ cell concept,  while not seen as a requirement for formative interventions [Sannino etc], it is seen as powerful in potential. To seek it, the researcher engages in an exploration of complex, messy concrete processes is undertaken over time to try to discern overarching concerns which can be expressed as a prototypical abstract germ cell concept.
+
+<!-- NOTE Blunden and Engestrom's disagreement about unit of analysis -->
+
+For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, (and are also the topic of Chapter 6.)
+
+For facilitators, GDPs can help communicate and package useful tools and processes.
+
+Within the terminology outline by Denner et al. [@denner_does_2019], the P1 to P2 shift saw a move from a design-build-test to a stepwise approach. Step wise approaches comprises broadly of a fundamental coding approach which is introduced in simplistic, proto-typical format for learners to experience and explore, and which is then replaced by a more advanced model or more complicated instance of the task.
+
+Thus While the initial use of GDPs in P1 was piecemeal, by P2 a more structured, step-wise approach was present for participants
+
+This following summative narrative outlines of the use of GDPs, which were introduced as part of several guiding activities. These include:
+
+In P1 GDPs identified via playing games as part of an activity adapted from Moveable Game Jams
+And used in list of features used as a mediating planning tool.
+
+In P2 GDPs were incorporated as affordances into a starter game template in line with Microworld pedagogical principles
+- GDPs as quick start cards designrd to scaffold modification of code template
+- GDPs used in response  participant  requests for new features they wanted to add to their games resulting  as a menu of GDPs as documentation and code examples to facilitate creation of new code
+
+
+The data gathered showed that while many were at a level of making changes to personal code projects others were more to do with interaction in an emerging culture of this community of game makers.
+
+**Comparing to Stepwise approaches**
+
+
+
+
+OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
+
+
+<!-- NOTE - DROP - MAKE MORE DIRECT
+While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
+
+
+
+
 ### Link to next chapter/s
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software. I have explored alignment with the results research from the constructionist school.
+
+
+THE PROCESS WAS OPEN, RISKY, BUT VERY PRODUCTIVE.
+I was lucky to have a group in P1 as tenacious as that, and I also benefited by building on previous work.
+
+MOVE SOMEWHERE OR ADD SOMETHING ELSE TO CELEBRATE THIS PROCESS
+One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
 
 
 The next chapter explores the varied uses of a gameplay design patterns. In this study the patterns take the form of working with common game elements game design patterns.
 
 
 
-
-
-MOVE SOMEWHERE
-One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
 
 
 
